--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 
 
     </div>
-    <footer class="container-fluid bg-4 text-center" id="contact">
-        We Should Get In Touch!
-        <BR>
-        <a href="mailto:mupacif@pacee.net" class="btn btn-primary btn-xl page-scroll">mupacif@pacee.net</a>
+    <footer class="container-fluid text-center">
+       (c) pacee.net 
+       
     </footer>
 </body>
 
